base-apps/chores-tracker-backend/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: chores-tracker-backend
  namespace: chores-tracker-backend
spec:
  selector:
    app: chores-tracker-backend
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
